k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: students-portal-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: students-portal.local

    http:
      paths:

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend-service

            port:
              number: 5001

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service

            port:
              number: 80
